fix: sidebar quick-stats sizing on smaller displays

--- a/src/components/content-layout.scss
+++ b/src/components/content-layout.scss
@@ -65,10 +65,6 @@
   the left-hand nav stretch all the way to the bottom of the page.
 */
 @media screen and (max-width: 1139px) {
-  // .campaign-public-layout .collapsable-nav-row {
-  //   flex-wrap: wrap;
-  // }
-
   .collapsable-nav-row .front-nav-container {
     width: 70px;
   }
@@ -81,7 +77,7 @@
 }
 
 /**
-  MEDIUM SCREENS AND DOWN
+  MOBILE SCREENS
   This is where the page draws out to a full-width, vertical
   colun layout for mobile displays.
 */
